Add four houses section to html file

--- a/index.html
+++ b/index.html
@@ -25,5 +25,26 @@
                 <img src="https://c4.wallpaperflare.com/wallpaper/932/891/825/hogwarts-legacy-video-games-dragon-owl-harry-potter-hd-wallpaper-preview.jpg" alt="An image of Harry Potter">
             </div>
         </div>
+        <div class="second">
+            <div class="houses-info">Four Hogwarts Houses</div>
+            <div class="houses">
+                <div class="house">
+                    <img src="https://static.wikia.nocookie.net/harrypotter/images/b/b1/Gryffindor_ClearBG.png/revision/latest?cb=20190222162949" alt="Gryffindor">
+                    <div class="text">Where dwell the brave at heart, Their daring, nerve and chivalry set Gryffindors apart</div>
+                </div>
+                <div class="house">
+                    <img src="https://static.wikia.nocookie.net/harrypotter/images/7/71/Ravenclaw_ClearBG.png/revision/latest?cb=20161020182442" alt="Ravenclaw">
+                    <div class="text">Where those of wit and learning, will always find their kind</div>
+                </div>
+                <div class="house">
+                    <img src="https://static.wikia.nocookie.net/harrypotter/images/0/06/Hufflepuff_ClearBG.png/revision/latest/scale-to-width-down/700?cb=20161020182518" alt="Hufflepuff">
+                    <div class="text">Where they are just and loyal, true and unafriad of toil</div>
+                </div>
+                <div class="house">
+                    <img src="https://static.wikia.nocookie.net/harrypotter/images/0/00/Slytherin_ClearBG.png/revision/latest?cb=20161020182557" alt="Slytherin">
+                    <div class="text">Those cunning folks use any means to achieve their ends</div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
