Add Dumbledore's quote section to HTML

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <img src="https://c4.wallpaperflare.com/wallpaper/932/891/825/hogwarts-legacy-video-games-dragon-owl-harry-potter-hd-wallpaper-preview.jpg" alt="An image of Harry Potter">
             </div>
         </div>
+
         <div class="second">
             <div class="houses-info">Four Hogwarts Houses</div>
             <div class="houses">
@@ -45,6 +46,11 @@
                     <div class="text">Those cunning folks use any means to achieve their ends</div>
                 </div>
             </div>
+        </div>
+
+        <div class="third">
+            <div class="quote">It is a curious thing, Harry, but perhaps those who are the best suited to power are those who have never sought it.</div>
+            <div class="author">-Albus, Dumbledore</div>
         </div>
     </body>
 </html>
