Add styles to the fourth section

--- a/index.html
+++ b/index.html
@@ -52,5 +52,15 @@
             <div class="quote">It is a curious thing, Harry, but perhaps those who are the best suited to power are those who have never sought it.</div>
             <div class="author">-Albus, Dumbledore</div>
         </div>
+
+        <div class="fourth">
+            <div class="container">
+                <div class="container-text">
+                <div class="call">Join Harry and his friends!</div>
+                <div class="intro">Subscribe to lastest news in the wizard world by clicking the button!</div>
+                </div>
+                <button>Sign up</button>
+            </div>
+        </div>
     </body>
 </html>
