Add and style the footer section

--- a/index.html
+++ b/index.html
@@ -62,5 +62,9 @@
                 <button>Sign up</button>
             </div>
         </div>
+
+        <div class="footer">
+            <div class="copyright">Copyright @ Potterhead 2022</div>
+        </div>
     </body>
 </html>
